[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/GameUI/answerBox.png" type="Texture" id=1]
[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://AnswerBox.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
font_data = ExtResource( 2 )

[node name="AnswerBoxes" type="Node2D"]
script = ExtResource( 3 )

[node name="Box1" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Box1"]
margin_left = -2.0
margin_right = 207.0
margin_bottom = 213.0
shortcut_in_tooltip = false
flat = true
icon_align = 1

[node name="AnswerBox" type="Sprite" parent="Box1/Button"]
position = Vector2( 106, 102 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Box1/Button"]
margin_left = 36.0
margin_top = 47.0
margin_right = 177.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Box2" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Box2"]
margin_left = 229.0
margin_top = -4.0
margin_right = 437.0
margin_bottom = 209.0
shortcut_in_tooltip = false
flat = true
icon_align = 1

[node name="AnswerBox" type="Sprite" parent="Box2/Button"]
position = Vector2( 106, 102 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Box2/Button"]
margin_left = 36.0
margin_top = 47.0
margin_right = 177.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Box3" type="Node2D" parent="."]
position = Vector2( 456, -4 )

[node name="Button" type="Button" parent="Box3"]
margin_left = -2.0
margin_right = 207.0
margin_bottom = 213.0
shortcut_in_tooltip = false
flat = true
icon_align = 1

[node name="AnswerBox" type="Sprite" parent="Box3/Button"]
position = Vector2( 106, 102 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Box3/Button"]
margin_left = 36.0
margin_top = 47.0
margin_right = 177.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
__meta__ = {
"_editor_description_": ""
}
